State info to include full geometry and space name.
